--- a/admin/new-post.html
+++ b/admin/new-post.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800;900&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
-        /* ESTILO ADICIONADO/AJUSTADO AQUI */
         .main-content {
             padding-top: 80px;
-            min-height: calc(100vh - 160px); /* Garante que o main-content ocupe a altura restante */
+            min-height: calc(100vh - 160px);
         }
 
         .form-container {
@@ -82,7 +81,38 @@
         .btn-secondary:hover {
             background-color: var(--button-hover-secondary, #5a6268);
         }
-        /* Estilo para o botão de Logout no Header */
+
+        /* Estados de loading */
+        .btn-primary:disabled {
+            background-color: var(--button-disabled-color, #666);
+            cursor: not-allowed;
+            opacity: 0.7;
+        }
+
+        .btn-primary.loading {
+            position: relative;
+            color: transparent;
+        }
+
+        .btn-primary.loading::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            top: 50%;
+            left: 50%;
+            margin-left: -10px;
+            margin-top: -10px;
+            border: 2px solid #ffffff;
+            border-radius: 50%;
+            border-top-color: transparent;
+            animation: spin 1s ease-in-out infinite;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
         .logout-button {
             background: none;
             border: none;
@@ -148,13 +178,13 @@
                 <div class="form-group mb-3">
                     <label for="postCategory" class="form-label">Categoria:</label>
                     <select id="postCategory" class="form-control" required>
-                    <option value="">Selecione uma categoria</option>
-                    <option value="Programação">Programação</option>
-                    <option value="Inteligência Artificial">Inteligência Artificial</option>
-                    <option value="Carreira">Carreira</option>
-                    <option value="Tecnologia">Tecnologia</option>
-                    <option value="Desenvolvimento Web">Desenvolvimento Web</option>
-                    <option value="Outros">Outros</option>
+                        <option value="">Selecione uma categoria</option>
+                        <option value="Programação">Programação</option>
+                        <option value="Inteligência Artificial">Inteligência Artificial</option>
+                        <option value="Carreira">Carreira</option>
+                        <option value="Tecnologia">Tecnologia</option>
+                        <option value="Desenvolvimento Web">Desenvolvimento Web</option>
+                        <option value="Outros">Outros</option>
                     </select>
                     <small class="form-text text-muted">Selecione a categoria principal do seu artigo.</small>
                 </div>
@@ -202,149 +232,7 @@
         </div>
     </footer>
 
-    <script>
-    // Substitua esta URL pela URL base do seu backend
-    const BACKEND_BASE_URL = 'https://portfolio-blog-backend-z8mi.onrender.com'; // ALtere para a URL do seu backend!
-
-    let currentPostId = null; // Para armazenar o ID do post se estiver em modo de edição
-
-    // --- Função de Verificação de Autenticação ---
-    function checkAuthAndRedirect() {
-        const token = localStorage.getItem('adminToken');
-        if (!token) {
-            window.location.href = 'login.html';
-            return false;
-        }
-        return true;
-    }
-
-    // --- Função de Logout ---
-    document.getElementById('logoutBtn').addEventListener('click', function() {
-        localStorage.removeItem('adminToken'); // Remove o token
-        window.location.href = 'login.html'; // Redireciona para o login
-    });
-
-    // --- Função para Carregar Post para Edição ---
-    async function loadPostForEdit(postId) {
-        const token = localStorage.getItem('adminToken');
-        if (!token) {
-            checkAuthAndRedirect();
-            return;
-        }
-
-        try {
-            const response = await fetch(`${BACKEND_BASE_URL}/api/posts/${postId}`, { // USA ID AQUI
-                method: 'GET',
-                headers: {
-                    'x-auth-token': token // Envia o token (mesmo sendo GET, bom manter para consistência)
-                }
-            });
-
-            if (!response.ok) {
-                if (response.status === 401 || response.status === 403) {
-                    localStorage.removeItem('adminToken'); // Remove token inválido
-                    checkAuthAndRedirect(); // Redireciona
-                    return;
-                }
-                throw new Error(`Erro ao carregar post para edição: ${response.statusText}`);
-            }
-
-            const post = await response.json();
-            document.getElementById('formTitle').textContent = 'Editar Post';
-            document.getElementById('postTitle').value = post.title;
-            document.getElementById('postSlug').value = post.slug;
-            document.getElementById('postSlug').readOnly = true; // Slug não editável na edição
-            document.getElementById('postAuthor').value = post.author;
-            document.getElementById('postSummary').value = post.summary;
-            document.getElementById('postThumbnail').value = post.thumbnail || ''; // USA 'thumbnail' AQUI
-            document.getElementById('postContent').value = post.content;
-            document.getElementById('postCategory').value = post.category || ''; // Assegura que o campo seja preenchido se a categoria existir no post// ...
-            currentPostId = postId; // Armazena o ID do post que está sendo editado
-
-
-        } catch (error) {
-            console.error('Erro ao carregar post para edição:', error);
-            alert(`Erro ao carregar post para edição: ${error.message}`);
-            // Opcional: Redirecionar de volta para admin.html se o post não for encontrado
-            window.location.href = 'admin.html';
-        }
-    }
-
-    // --- Manipulador do Formulário (Salvar/Atualizar Post) ---
-    document.getElementById('postForm').addEventListener('submit', async function(event) {
-        event.preventDefault();
-
-        const token = localStorage.getItem('adminToken');
-        if (!token) {
-            checkAuthAndRedirect();
-            return;
-        }
-
-       // ... dentro do listener de submit do postForm ...
-        const postData = {
-            title: document.getElementById('postTitle').value,
-            slug: document.getElementById('postSlug').value,
-            author: document.getElementById('postAuthor').value,
-            summary: document.getElementById('postSummary').value,
-            thumbnail: document.getElementById('postThumbnail').value,
-            content: document.getElementById('postContent').value,
-            category: document.getElementById('postCategory').value // Coleta o valor do campo de categoria
-        };
-
-        let url = `${BACKEND_BASE_URL}/api/posts`;
-        let method = 'POST';
-
-        if (currentPostId) { // Se estiver editando um post existente
-            url = `${BACKEND_BASE_URL}/api/posts/${currentPostId}`; // USA ID AQUI
-            method = 'PUT';
-        }
-
-        try {
-            const response = await fetch(url, {
-                method: method,
-                headers: {
-                    'Content-Type': 'application/json',
-                    'x-auth-token': token // Envia o token JWT
-                },
-                body: JSON.stringify(postData)
-            });
-
-            if (!response.ok) {
-                if (response.status === 401 || response.status === 403) {
-                    localStorage.removeItem('adminToken');
-                    checkAuthAndRedirect();
-                    return;
-                }
-                const errorData = await response.json();
-                throw new Error(errorData.msg || `Erro ao ${currentPostId ? 'atualizar' : 'criar'} post: ${response.statusText}`);
-            }
-
-            alert(`Post ${currentPostId ? 'atualizado' : 'criado'} com sucesso!`);
-            window.location.href = 'admin.html'; // Redireciona de volta para a lista
-        } catch (error) {
-            console.error(`Erro ao ${currentPostId ? 'atualizar' : 'criar'} post:`, error);
-            alert(`Erro: ${error.message}`);
-        }
-    });
-
-    // --- Listener para o botão "Cancelar" ---
-    document.getElementById('cancelBtn').addEventListener('click', function() {
-        window.location.href = 'admin.html'; // Volta para a lista de posts
-    });
-
-    // --- Inicialização da página ---
-    document.addEventListener('DOMContentLoaded', () => {
-        if (checkAuthAndRedirect()) { // Verifica a autenticação ao carregar
-            // Verifica se há um ID de post na URL (modo de edição)
-            const urlParams = new URLSearchParams(window.location.search);
-            const postId = urlParams.get('id'); // PEGA 'id' DA URL
-
-            if (postId) {
-                loadPostForEdit(postId); // Carrega o post para edição
-            }
-        }
-    });
-</script>
-    <script src="../script.js"></script> <script src="admin.js"></script> </body>
+    <!-- APENAS UM SCRIPT - use o admin.js corrigido -->
+    <script src="admin.js"></script>
 </body>
 </html>
