correção do formato da imagem.

--- a/contato.html
+++ b/contato.html
@@ -61,7 +61,7 @@
 
                 <!-- Foto -->
                 <div class="contact-image-container">
-                    <img src="img/imagemcontato.PNG" alt="Yuri Barbosa" class="contact-intro-img">
+                    <img src="img/imagemcontato.png" alt="Yuri Barbosa" class="contact-intro-img">
                 </div>
             </div>
 
