--- a/sobremim.html
+++ b/sobremim.html
@@ -37,9 +37,9 @@
             <nav class="full-navbar">
                 <a href="index.html" class="menu-item">Início</a>
                 <a href="sobremim.html" class="menu-item active">Sobre Mim</a>
-                <a href="/blog/blog.html" class="menu-item">Blog</a>
+                <a href="../blog/blog.html" class="menu-item">Blog</a>
                 <a href="contato.html" class="menu-item">Contato</a>
-                <a href="admin/admin.html" class="menu-item admin-link"><i class='bx bx-cog'></i> Admin</a>
+                <a href="..admin/admin.html" class="menu-item admin-link"><i class='bx bx-cog'></i> Admin</a>
             </nav>
         </div>
     </div>
