Atualizações de responsasividade e header desktop.

--- a/sobremim.html
+++ b/sobremim.html
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <!-- SEÇÃO 4: FINAL - COM CAIXA NUVEM -->
+    <!-- SEÇÃO 4: FINAL - COM CAIXA NUVEM E BOTÃO DENTRO -->
     <section class="about-section final-section" id="paragrafo4-section">
         <div class="page-content">
             <div class="container-grid">
@@ -141,16 +141,16 @@
                                 tendências do mercado para oferecer um serviço de alta<span class="highlight-box">qualidade</span> 
                                 e contribuir significativamente para o sucesso dos projetos.
                             </p>
+                            
+                            <!-- BOTÃO DENTRO DA CAIXA NUVEM -->
+                            <div class="cta-inside-cloud">
+                                <a href="./blog/blog.html" class="cta-inside-btn">
+                                    <span class="cta-text">Ver Projetos no Blog</span>
+                                    <span class="cta-arrow">→</span>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <!-- CTA ATUALIZADO -->
-                <div class="cta-inline-container">
-                    <a href="./blog/blog.html" class="cta-inline-btn">
-                        <span class="cta-text">Ver Projetos no Blog</span>
-                        <span class="cta-arrow">→</span>
-                    </a>
                 </div>
             </div>
         </div>
