--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <link rel="icon" type="image/png" href="img/logo_inicio.png">
     <title>Yuri | Portfólio</title>
     <link rel="stylesheet" href="style.css">
+    <!-- NOVO: CSS das transições -->
+    <link rel="stylesheet" href="transitions.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800;900&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    
+    <!-- VARIÁVEIS DE CORES ESPECÍFICAS DA PÁGINA INICIAL -->
+    <style>
+        :root {
+            /* Cores específicas para as transições da página inicial */
+            --cor-secao-1: #e1eaf0;    /* Home - Azul bem claro */
+            --cor-secao-2: #d4e3ec;    /* Transição suave */
+            --cor-secao-3: #c7dce7;    /* Intro Trabalho - Azul um pouco mais escuro */
+            --cor-destaque: #6c63ff;   /* Cor de destaque (mantida da paleta original) */
+        }
+    </style>
 </head>
 <body>
     <header class="header">
@@ -38,8 +51,8 @@
         </div>
     </div>
 
-    <!-- SEÇÃO HOME COM SCROLL SNAP -->
-    <section class="home scroll-section" id="home">
+    <!-- SEÇÃO HOME COM SCROLL SNAP E TRANSIÇÃO -->
+    <section class="home scroll-section" id="home" data-section="home">
         <div class="page-content">
             <div class="container-grid home-layout-grid">
                 <div class="home-content">
@@ -71,8 +84,8 @@
         </div>
     </section>
 
-    <!-- SEÇÃO INTRO TRABALHO COM SCROLL SNAP -->
-    <section class="intro-trabalho scroll-section" id="intro-trabalho">
+    <!-- SEÇÃO INTRO TRABALHO COM SCROLL SNAP E TRANSIÇÃO -->
+    <section class="intro-trabalho scroll-section" id="intro-trabalho" data-section="intro-trabalho">
         <div class="page-content">
             <div class="container-grid intro-grid">
                 <div class="intro-texto">
@@ -109,5 +122,7 @@
     </a>
 
     <script src="script.js"></script>
+    <!-- NOVO: Script das transições -->
+    <script src="transitions.js"></script>
 </body>
 </html>
